[tool.poetry]
name = "bottle-time"
version = "0.1.0"
description = ""
authors = ["John Eckhart <jeckhart@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
circuitpython-stubs = "^9.2.1"
adafruit-circuitpython-magtag = "==2.2.11"
adafruit-circuitpython-led-animation = "==2.11.0"
circup = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
